<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">NurseryGarden</string>
    <string name="hint_password">Password</string>
    <string name="hint_username">UserName</string>
    <string name="btn_login">Login</string>
    <string name="font_circular_medium">circular-medium.ttf</string>
    <string name="font_circular_bold">circular-bold.ttf</string>
    <string name="font_circular_book">circular-book.ttf</string>
    <string name="font_circular_black">circular-black.ttf</string>
    <string name="font_normal">din_pro_light.otf</string>
    <string name="no_internet">Your internet seems to be offline!</string>
    <string name="view_image">View Inspected Image</string>
    <string name="take_action">Take Action</string>
    <string name="view_action">View Action</string>
    <string name="action_taken_tv" tools:ignore="ExtraTranslation">Action Taken Against Inspection Report for High Value Project</string>
    <string name="init_vector">2SN22SkJGDyOAXUU</string>
    <string name="main_page">Main Page</string>
    <string name="log_out_icon">log_out_icon</string>
    <string name="go">Go</string>
    <string name="pending_works_for_upload">Pending Works for Upload</string>
    <string name="sync">Sync</string>
    <string name="pending_uploads">Pending Uploads</string>
    <string name="upload_icon">upload_icon</string>
    <string name="software_designed_amp_developed_by_nic"><![CDATA[Software Designed & Developed by NIC]]></string>
    <string name="select_type_of_tree">Select Type of Tree</string>
    <string name="select_self_help_group_member">Select Self Help Group Member</string>
    <string name="select_self_help_group">Select Self Help Group</string>
    <string name="home_page">Home Page</string>
    <string name="back_icon">back_icon</string>
    <string name="select_fin_year">Select Fin Year</string>
    <string name="after_capture">After Capture</string>
    <string name="save_local">Save Local</string>
    <string name="before_capture">Before Capture</string>
    <string name="gps_is_not_turned_on">GPS is not turned on…</string>
    <string name="satellite">Satellite communication not available to get GPS Co-ordination Please Capture Photo in Open Area…</string>
    <string name="permission_required">Permissions required!</string>
    <string name="camera_need_permission">Camera needs few permissions to work properly. Grant them in settings.</string>
    <string name="goto_settings">Goto Settings</string>
    <string name="cancel">Cancel</string>
    <string name="user_canceled_image_capture">User cancelled image capture</string>
    <string name="sorry_failed_to_capture">Sorry! Failed to capture image</string>
    <string name="user_canceled_video">User cancelled video recording</string>
    <string name="sorry_failed_capture_video">Sorry! Failed to record video</string>
    <string name="do_u_want_to_delete">Do you want to delete?</string>
    <string name="do_u_want_to_upload">Do you want to Upload?</string>
    <string name="do_u_want_to_delivered">Do you want to Delivered this items?</string>
    <string name="do_u_want_to_edit">Do you want to Edit?</string>
    <string name="entry_form">Entry Form</string>
    <string name="view_data">View Data</string>
    <string name="at_least_capture_one_photo">At least Capture one Photo</string>
    <string name="please_capture_image">Please Capture Image</string>
    <string name="maximum_three_photos">Maximum Photo reached</string>
    <string name="inserted_success">Inserted Success!</string>
    <string name="updated_success">Updated Success!</string>
    <string name="select_buyer_type">Select Buyer Type</string>
    <string name="enter_buyer_name">Enter Buyer Name</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="enter_address">Enter Address</string>
    <string name="enter_the_count_of_each_species">Enter the Count of Each Species</string>
    <string name="search">Search</string>
    <string name="sell_species">Sell Species</string>
    <string name="enter_count">Enter count</string>
    <string name="enter_mgnregs_id">Enter MGNREGS ID</string>
    <string name="village_name">Village Name</string>
    <string name="semi_colan">:</string>
    <string name="nursery_id">Nursery Id</string>
    <string name="nursery_level_id">Nursery Level Id</string>
    <string name="nursery_name_en">Nursery Name En</string>
    <string name="nursery_name">Nursery Name</string>
    <string name="nursery_name_ta">Nursery Name Ta</string>
    <string name="nursery_address">Nursery Address</string>
    <string name="district_name">District Name</string>
    <string name="block_name">Block Name</string>
    <string name="add_view_land">Add/View Land</string>
    <string name="add_view_batch">Add/View Batch</string>
    <string name="sapling_sale">Sapling Sale</string>
    <string name="sapling_dead">Sapling Dead</string>
    <string name="view_order_history">View Order History</string>
    <string name="view_delivery_history">View Delivery History</string>
    <string name="batch_details">Batch Details</string>
    <string name="species_details">Species Details</string>
    <string name="land_details">Land Details</string>
    <string name="dead_sapling_entry_view">Dead Sapling Entry/View</string>
    <string name="choose_your_species">Choose Your Species</string>
    <string name="your_species_details">Your Species Details</string>
    <string name="no_of_dead_saplings">No of Dead Saplings</string>
    <string name="enter_dead_sapling_count">Enter Dead Sapling Count</string>
    <string name="select_dead_stage">Select Dead Stage</string>
    <string name="dead_reason">Dead Reason</string>
    <string name="enter_dead_reason">Enter Dead Reason</string>
    <string name="save">Save</string>
    <string name="growth_tracking_entry">Growth Tracking Entry</string>
    <string name="choose_date">Choose Date</string>
    <string name="take_photo">Take Photo</string>
    <string name="growth_details">Growth Details</string>
    <string name="sapling_details">Sapling Details</string>
    <string name="dead_entry">Dead Entry</string>
    <string name="filter">Filter</string>
    <string name="select_batch">Select Batch</string>
    <string name="select_species">Select Species</string>
    <string name="select_days">Select Days</string>
    <string name="select_height">Select Height</string>
    <string name="upload_data">Upload Data</string>
    <string name="no_projects_found">No Projects Found!</string>
    <string name="view_history_order">View History Order</string>
    <string name="select_date">Select Date</string>
    <string name="order_items">Order Items</string>
    <string name="delivery">Delivery</string>
    <string name="your_saplings_details">Your Saplings Details</string>
    <string name="sapling_entry_view">Sapling Entry/View</string>
    <string name="next">Next</string>
    <string name="add_batch_details">Add Batch Details</string>
    <string name="created_date">Created Date</string>
    <string name="batch">Batch</string>
    <string name="select_land_type">Select Land Type</string>
    <string name="enter_area">Enter Area (in acres)</string>
    <string name="other_land_type">Specify other land type</string>
    <string name="enter_survey_number">Enter Survey Number</string>
    <string name="enter_sub_div_no">Enter Sub Division Number</string>
    <string name="land_address">Land Address</string>
    <string name="add_edit_species_details">Add/Edit Species Details</string>
    <string name="select_species_type">Select Species Type</string>
    <string name="number_of_species_count">Number of Species Count</string>
    <string name="enter_species_count">Enter Species Count</string>
    <string name="add_saplings_details">Add Saplings Details</string>
    <string name="number_of_saplings">Number of Saplings</string>
    <string name="no_of_saplings">No of Saplings</string>
    <string name="height_in_centimeter">Height in Centimeter</string>
    <string name="enter_height_in_cm">Enter Height ( in cm )</string>
    <string name="ok">OK</string>
    <string name="nursery_garden">Nursery Garden</string>
    <string name="you_need_to_update_nursery_garden">You need to update Nursery Garden</string>
    <string name="this_version_of_nursery_garden_is_no_longer_supported_please_go_to_official_site_and_install_new_version">This version of Nursery Garden is no longer supported. Please go to Official Site and install new version</string>
    <string name="update">Update</string>
    <string name="you_can_capture_up_to_3_photos">You Can Capture up to 3 photos</string>
    <string name="add_photo">Add Photo</string>
    <string name="save_image_local">Save Image Local</string>
    <string name="enter_description">Enter Description</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="submit">Submit</string>
    <string name="species_name">Species Name</string>
    <string name="quantity">Quantity</string>
    <string name="height">Height</string>
    <string name="age">Age</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="version">Version</string>
    <string name="sign_in">Sign In</string>
    <string name="delete">Delete</string>
    <string name="upload">Upload</string>
    <string name="add_view_species">Add/View species</string>
    <string name="track_growth">Track Growth</string>
    <string name="dead_sapling">Dead sapling</string>
    <string name="upload_dead_sapling">Upload Dead Sapling</string>
    <string name="batch_number">Batch Number</string>
    <string name="days">Days</string>
    <string name="available_saplings">Available Saplings</string>
    <string name="required_saplings">Required Saplings</string>
    <string name="order_date">Order Date</string>
    <string name="order_id">Order ID</string>
    <string name="byer_name">Byer Name</string>
    <string name="view">View</string>
    <string name="date">Date</string>
    <string name="add_view_saplings_details">Add/View Saplings Details</string>
    <string name="save_image">Save Image</string>
    <string name="login">Login</string>
    <string name="remember_me">Remember Me</string>
    <string name="please_enter_user_name_and_password">Please enter your username and password!</string>
    <string name="internet_connection_not_available_please_turn_on_or_offline">Internet Connection is not available..Please Turn ON Network Connection OR Continue With Off-line Mode..</string>
    <string name="settings">Settings</string>
    <string name="continue_with_offline">Continue With Off-Line</string>
    <string name="please_enter_the_user_name">Please enter the username</string>
    <string name="please_enter_the_password">Please enter the password</string>
    <string name="invalid_user_name_or_password">Invalid UserName Or Password</string>
    <string name="log_in_again">Login Again</string>
    <string name="no_data_available_for_offline_please_turn_on_network">No data available for offline. Please Turn On Your Network</string>
    <string name="add_or_edit_species_details">Add/Edit Species Details</string>
    <string name="please_enter_species_count">Please Enter Species Count</string>
    <string name="something_wrong">Something Wrong</string>
    <string name="enter_the_dead_saplings">Enter the Dead Saplings</string>
    <string name="count_mismatched">Count MisMatched</string>
    <string name="success">Success</string>
    <string name="faild">Failed</string>
    <string name="maximum_count_reached">Maximum Count Reached</string>
    <string name="welcome_to_nursery_garden">Welcome to Nursery Garden</string>
    <string name="please_choose_your_language">Please Choose Your Language</string>
    <string name="tamil">Tamil</string>
    <string name="english">English</string>
    <string name="done">Done</string>
</resources>