<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="activity"
            type="com.nic.nurserygarden.activity.ChooseLanguageActivity" />
    </data>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/d_grey"
        android:fitsSystemWindows="true"
        tools:context="com.nic.RealTimeMonitoringSystem.activity.SplashScreen">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_100sdp"
                android:id="@+id/image_for"
                android:src="@drawable/garden"
                android:layout_marginTop="@dimen/_10sdp"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@id/image_for">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_10sdp"
                    android:textAlignment="center"
                    android:text="@string/welcome_to_nursery_garden"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:textSize="@dimen/large_title_text_size"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_10sdp"
                    android:textAlignment="center"
                    android:text="@string/please_choose_your_language"
                    android:layout_gravity="center"
                    android:textSize="@dimen/large_content_text_size"/>
            </LinearLayout>
        </RelativeLayout>
        <RelativeLayout
            android:layout_margin="@dimen/_10sdp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/_20sdp"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_80sdp"
                android:weightSum="2"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_margin="@dimen/_10sdp"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/tamil_language"
                    app:cardCornerRadius="@dimen/_10sdp"
                    android:outlineSpotShadowColor="@color/colorPrimary"
                    android:outlineAmbientShadowColor="@color/colorPrimary"
                    tools:ignore="UnusedAttribute"
                    app:cardElevation="@dimen/_7sdp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tamil"
                            android:layout_centerInParent="true"
                            android:textSize="@dimen/large_content_text_size"/>
                    </RelativeLayout>

                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_margin="@dimen/_10sdp"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/english_language"
                    app:cardCornerRadius="@dimen/_10sdp"
                    android:outlineSpotShadowColor="@color/colorPrimary"
                    android:outlineAmbientShadowColor="@color/colorPrimary"
                    tools:ignore="UnusedAttribute"
                    app:cardElevation="@dimen/_7sdp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/english"
                            android:layout_centerInParent="true"
                            android:textSize="@dimen/large_content_text_size"/>
                    </RelativeLayout>

                </androidx.cardview.widget.CardView>
            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_alignParentBottom="true">

            <Button

                android:id="@+id/done_btn"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="@drawable/button_background"
                android:text="@string/done"
                android:textSize="@dimen/content_text_size"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textStyle="bold"/>

        </RelativeLayout>

    </RelativeLayout>
</layout>