<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_bg_new">

        <RelativeLayout
            android:id="@+id/header_layout"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">


            <ImageView
                android:id="@+id/logout"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@mipmap/close_icon"
                android:backgroundTint="@color/white"
                tools:ignore="ContentDescription" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/header_layout">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:text="@string/filter"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"

                android:textColor="@color/white" />



        </RelativeLayout>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header"
        android:layout_above="@id/submit">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/select_batch_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#f5f9fb"
                android:padding="@dimen/_10sdp">

            <TextView
                android:id="@+id/select_batch_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_13sdp"
                android:text="@string/select_batch"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold"
                android:textColor="@color/blue_background" />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/batch_name_recycler"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_below="@id/select_batch_tv"/>

        </RelativeLayout>

            <RelativeLayout
                android:id="@+id/select_species_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/padding"
                android:background="#f5f9fb">

            <TextView
                android:id="@+id/select_species_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_13sdp"
                android:text="@string/select_species"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold"
                android:textColor="@color/blue_background" />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/species_name_recycler"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_below="@id/select_species_tv"/>
        </RelativeLayout>

            <RelativeLayout
                android:id="@+id/select_days_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/padding"
                android:background="#f5f9fb">

                <TextView
                    android:id="@+id/select_days_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_13sdp"
                    android:text="@string/select_days"
                    android:textSize="@dimen/_13sdp"
                    android:textStyle="bold"
                    android:textColor="@color/blue_background" />

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/days_name_recycler"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_below="@id/select_days_tv"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/select_height_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/padding"
                android:background="#f5f9fb">

                <TextView
                    android:id="@+id/select_height_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_13sdp"
                    android:text="@string/select_height"
                    android:textSize="@dimen/_13sdp"
                    android:textStyle="bold"
                    android:textColor="@color/blue_background" />

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/height_name_recycler"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_below="@id/select_height_tv"/>
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/_25sdp">

        <TextView
            android:id="@+id/btn_ok"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_13sdp"
            android:layout_marginEnd="@dimen/_13sdp"
            android:background="@drawable/button_background"
            android:gravity="center"
            android:text="@string/submit"
            android:textSize="@dimen/_13sdp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/white" />
    </LinearLayout>


</RelativeLayout>