<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <data>

        <variable
            name="activity"
            type="com.nic.nurserygarden.activity.GrowthTrackingActivity.SaplingEntryView" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/d_grey">

        <RelativeLayout
                    android:id="@+id/header_layout"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@drawable/background">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginTop="@dimen/margin"
                        android:text="@string/sapling_entry_view"
                        android:textColor="@color/white"
                        android:textSize="@dimen/title_text_size"
                        android:textStyle="bold"
                        tools:ignore="RelativeOverlap" />

                    <ImageView
                        android:id="@+id/back_img"
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_alignParentStart="true"
                        android:layout_centerInParent="true"
                        android:layout_marginStart="@dimen/_12sdp"
                        android:onClick="@{()-> activity.onBackPress()}"
                        android:src="@mipmap/back_arrow"
                        tools:ignore="ContentDescription" />


                </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/header_layout"
            android:layout_above="@+id/textView1">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/species_list_layout">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/blue_background"
                            android:textStyle="bold"
                            android:textSize="@dimen/content_title_text_size"
                            android:text="@string/choose_your_species"
                            android:id="@+id/choose_species_text_view"
                            android:padding="@dimen/_10sdp"/>
                        <androidx.recyclerview.widget.RecyclerView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/choose_species_recycler"
                            android:layout_below="@+id/choose_species_text_view"
                            android:layout_marginTop="@dimen/_10sdp"
                            />
                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/species_details_layout"
                        android:layout_below="@+id/species_list_layout">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/blue_background"
                            android:textStyle="bold"
                            android:textSize="@dimen/content_title_text_size"
                            android:text="@string/your_species_details"
                            android:id="@+id/growth_details_text_view"
                            android:padding="@dimen/_10sdp"/>
                        <androidx.recyclerview.widget.RecyclerView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/species_details_recycler"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:layout_below="@id/growth_details_text_view"/>
                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/saplings_details_layout"
                        android:layout_below="@+id/species_details_layout">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/blue_background"
                            android:textStyle="bold"
                            android:textSize="@dimen/content_title_text_size"
                            android:text="@string/your_saplings_details"
                            android:id="@+id/saplings_details_text_view"
                            android:padding="@dimen/_10sdp"/>
                        <androidx.recyclerview.widget.RecyclerView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/saplings_details_recycler"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:layout_below="@id/saplings_details_text_view"/>
                    </RelativeLayout>

               </RelativeLayout>

            </ScrollView>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/add_sapling_detail_btn"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:src="@drawable/ic_add_icon"
                android:tint="@color/white"/>

        </RelativeLayout>
        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:text="@string/software_designed_amp_developed_by_nic"
            android:textAlignment="center"
            android:textColor="@color/d_grey1"
            android:textSize="@dimen/title_text_size"
            android:textStyle="bold" />


    </RelativeLayout>
</layout>